fix position of collapsed contents box on record page
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WDK/trunk@20426 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/View/webapp/wdk/css/wdk-Record.css
+++ b/View/webapp/wdk/css/wdk-Record.css
@@ -59,6 +59,7 @@
 .wdk-RecordSidebar__fixed {
   position: fixed;
   top: 0;
+  left: -298px;
 }
 
 .wdk-RecordSidebarHeader {
